# wms-poc

./: .env.example  .gitignore  README.md  alembic.ini  plan-warehouseManagementSystem-implementationChecklist.prompt.md  plan-warehouseManagementSystem.prompt.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260215_0001_initial_schema.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: executors.py  handling_units.py  inventory.py  locations.py  materials.py  missions.py  movements.py  operators.py  requests.py  rules.py  vehicles.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  executor.py  handling_unit.py  inventory.py  item.py  location.py  mission.py  operator.py
app/repositories/: __init__.py  executor.py  handling_unit.py  inventory.py  item.py  location.py  mission.py  operator.py
app/rules/: __init__.py  exceptions.py  mission_rules.py  movement_rules.py
app/schemas/: __init__.py  common.py  executor.py  handling_unit.py  inventory.py  item.py  location.py  mission.py  operator.py  rules.py
app/services/: __init__.py  inventory_service.py  mission_service.py
